tests/ex10.test
Error (Line 7): matrix addition mismatch
